# onlineShop

./: pyproject.toml
onlineStore/: db.sqlite3
onlineStore/cart/: cart.py  forms.py  urls.py  views.py
onlineStore/cart/templates/cart/: detail.html
onlineStore/core/: admin.py  models.py  urls.py  views.py
onlineStore/core/migrations/: 0001_initial.py
onlineStore/core/static/css/: base.css
onlineStore/core/templates/core/: base.html
onlineStore/core/templates/core/index/: index.html
onlineStore/core/templates/core/product/: detail.html  list.html
onlineStore/onlineStore/: asgi.py  settings.py  urls.py  wsgi.py
onlineStore/orders/: admin.py  forms.py  models.py  views.py
onlineStore/orders/templates/order/: create.html  created.html
onlineStore/users/: forms.py  models.py  urls.py  views.py
onlineStore/users/templates/users/: login.html  profile.html  registration.html
