[project]
name = "onlinestoredependency"
version = "0.1.0"
description = ""
authors = [
    {name = "mr_undercross",email = "mrUndercross@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
